[gd_scene load_steps=2 format=2]

[ext_resource path="res://NetworkSetup.gd" type="Script" id=1]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -260.0
margin_right = 197.0
margin_bottom = 260.0

[node name="Host" type="Button" parent="VBoxContainer"]
margin_right = 394.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Host"

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 394.0
margin_bottom = 466.0
color = Color( 0.027451, 0.427451, 0.545098, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 470.0
margin_right = 394.0
margin_bottom = 520.0

[node name="IPAddress" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 0 )
align = 1
placeholder_text = "IP goes here"

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 394.0
margin_bottom = 50.0
rect_min_size = Vector2( 90, 50 )
text = "Join"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="color_changed" from="VBoxContainer/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/IPAddress" to="." method="_on_IPAddress_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_Join_pressed"]
